Add devise authentication

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,5 @@
 <h1><%= pluralize(@groups.count ,'Group') %> </h1>
+<h3><%= pluralize(@growers.count,'Grower')%></h3>
 
 <%=link_to("Add new Group",new_group_path)%>
 
