Fix grower index view ,nested routes

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,7 +1,7 @@
 <h5>action#Show</h5>
 <%=link_to "<<= Back to index",groups_path %>
 
-<h2><%=@group.name%></h2><h3>Total </h3>
+<h2><%=@group.name%></h2>
 <p>
 	<b>Address:</b><%=@group.address%>
 </p>
