--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,7 +23,7 @@
 <p><b>Import Your Existing Tasks.</b> If you already use a task manager, import tasks from many sources.</p>
 
 
-<%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-large btn-primary" %> </div>
+<%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-large btn-success" %> </div>
 <%=link_to image_tag("rails.png",alt:"instagap")%>
 
 </div>
