--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,7 +8,8 @@
 <p>
 	<b>Phone:</b><%=@group.phone%> <b> Mobile:</b><%=@group.mobile%>
 </p>
-<%=link_to"Edit",edit_group_path(@group)%>
+<%=link_to"Edit",edit_group_path(@group)%> | 
+<%=link_to"Delete Group",group_path(@group) ,method: :delete %>
 <p>
 	<%=link_to "Members of Group",group_growers_path(@group) %>
 </p>
