--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,12 @@
 		<%end%>
 
 
-
+<div class="container">
 
 <%= yield %>
+
+<%=debug(params)if Rails.env.development?%>
+</div>
 
 </body>
 </html>
