add partial growetr's list to group /index

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -12,6 +12,6 @@
  		<strong>
  			<%= link_to(group.name ,group_path(group)) %>
  		</strong> 
- 		<%=group.phone %> <%=group.mobile%></li>
+ 		  <%= group.growers.count(@group) %> Growers</li>
  	<% end%>
  </ul>
