--- a/app/views/groups/_grower_list.html.erb
+++ b/app/views/groups/_grower_list.html.erb
@@ -1,13 +1,13 @@
 <table>
-	<tr><th>Name</th><th>Contact</th><th>Exp Production</th></tr>
+	<tr><th>Name</th><th>Fields</th><th>Tons</th></tr>
 
 
 	<%growers.each do |grower|%>
 	<tr>
 		<td><%=link_to grower.name,group_grower_path(@group,grower)%></td>
-		<td><%= grower.mobile%></td>
-		<td></td>
+		<td><%= grower.pmus.count%></td>
 		<td><%=grower.pmus.sum(:expected_production)%></td>
+
 	</tr>
 	<%end%>
 </table>
