--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,9 +1,8 @@
 <h1><%= pluralize(@groups.count ,'Group') %> </h1>
-<h3><%= pluralize(@growers.count,'Grower')%></h3>
+<h3><%= pluralize(@growers.count,'Grower') %>  <%= pluralize(@pmus.count,'Field')%> 
+    <%= pluralize(@pmus.sum(:expected_production),'Ton')%></h3>
 
 
-
-<%=link_to("Add new Group",new_group_path)%>
 
 
  <ul>
@@ -12,6 +11,11 @@
  		<strong>
  			<%= link_to(group.name ,group_path(group)) %>
  		</strong> 
- 		  <%= group.growers.count(@group) %> Growers</li>
+ 		  <%= group.growers.count(@group) %> Growers
+ 		  <%= group.pmus.count%> Fields
+ 		  <%=group.pmus.sum(:expected_production)%> Tons</li>
  	<% end%>
  </ul>
+ <div>
+<%=link_to("Add new Group",new_group_path)%>
+</div>
