--- a/app/views/growers/_pmu_list.html.erb
+++ b/app/views/growers/_pmu_list.html.erb
@@ -3,9 +3,7 @@
       <tr>
         <td><%= pmu.produce %></td>
         <td><%= pmu.variety %></td>
-        <td><%= pmu.location %></td>
-        <td><%= pmu.nearest_village %></td>
-        
+        <td><%= link_to pmu.location,grower_pmu_path(@grower,pmu) %><%= pmu.location %></td>
         <td><%= pmu.expected_production %></td>
         <td><%= link_to "Edit",edit_grower_pmu_path(@grower,pmu)%></td>
         <td><%=link_to "Delete",grower_pmu_path(@grower,pmu),method: :delete%></td>
