Irrigation crud done

--- a/app/views/lines/edit.html.erb
+++ b/app/views/lines/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing line</h1>
+<h3>Editing Phyto Protection for <%=@pmu.produce%> at  <%=@pmu.location %>  </h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @line %> |
-<%= link_to 'Back', lines_path %>
+<%= link_to 'Show' %> |
+<%= link_to 'Back' %>
