--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -35,5 +35,5 @@
   <%= @line.tech_advisor %>
 </p>
 
-<%= link_to 'Edit', edit_line_path(@line) %> |
-<%= link_to 'Back', lines_path %>
+<%= link_to 'Edit', edit_pmu_line_path(@pmu,@line) %> |
+<%= link_to 'Back', pmu_lines_path %>
