--- a/app/views/lines/_form.html.erb
+++ b/app/views/lines/_form.html.erb
@@ -12,33 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :pmu_id %><br>
-    <%= f.text_field :pmu_id %>
+    <%= f.hidden_field :pmu_id %>
   </div>
   
   <div class="field">
-    <%= f.label :sub_id,"Substance" %><br>
-    <%= f.collection_select :sub_id, Sub.all,:id,:name %> 
-  </div>
-
-  <div class="field">
-    <%= f.label :date %><br>
+    <%= f.label :date %>
     <%= f.date_select :date %>
   </div>
   <div class="field">
-    <%= f.label :quantity %><br>
+    <%= f.label :sub_id,"Substance" %>
+    <%= f.collection_select :sub_id, Sub.all,:id,:name %> 
+  </div>
+  <div class="field">
+    <%= f.label :quantity %>
     <%= f.text_field :quantity %>
   </div>
   <div class="field">
-    <%= f.label :reasoning %><br>
+    <%= f.label :reasoning %>
     <%= f.text_field :reasoning %>
   </div>
   <div class="field">
-    <%= f.label :operator %><br>
+    <%= f.label :operator %>
     <%= f.text_field :operator %>
   </div>
   <div class="field">
-    <%= f.label :tech_advisor %><br>
+    <%= f.label :tech_advisor %>
     <%= f.text_field :tech_advisor %>
   </div>
   <div class="actions">
