--- a/app/views/pmus/_form.html.erb
+++ b/app/views/pmus/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :grower_id %><br>
-    <%= f.number_field :grower_id %>
+   
+    <%= f.hidden_field :grower_id %>
   </div>
   <div class="field">
     <%= f.label :produce %><br>
