--- a/app/views/pmus/new.html.erb
+++ b/app/views/pmus/new.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for([@grower,@pmu]) do |f| %>
 <div class="field">
-    <%= f.label :grower_id %><br>
-    <%= f.number_field :grower_id %>
+    
+    <%= f.hidden_field :grower_id %>
   </div>
   <div class="field">
     <%= f.label :produce %><br>
