--- a/app/views/lines/_form.html.erb
+++ b/app/views/lines/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :sub_id,"Substance" %>
-    <%= f.collection_select :sub_id, Sub.all,:id,:name %> 
+    <%= f.collection_select :sub_id, Sub.all,:id,:sub_id %> 
   </div>
   <div class="field">
     <%= f.label :quantity %>
