fix links on actions

--- a/app/views/fertilizers/edit.html.erb
+++ b/app/views/fertilizers/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing fertilizer</h1>
+<h3>Editing fertilizer for <%=@pmu.produce%> at  <%=@pmu.location %>  </h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @fertilizer %> |
-<%= link_to 'Back', fertilizers_path %>
