--- a/app/views/fertilizers/_form.html.erb
+++ b/app/views/fertilizers/_form.html.erb
@@ -11,32 +11,32 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :pmu_id %><br>
-    <%= f.number_field :pmu_id %>
+  <div class="field"> 
+    <%= f.hidden_field :pmu_id %>
   </div>
   <div class="field">
-    <%= f.label :sub_id %><br>
-    <%= f.number_field :sub_id %>
-  </div>
-  <div class="field">
-    <%= f.label :date %><br>
+    <%= f.label :date %>
     <%= f.date_select :date %>
   </div>
   <div class="field">
-    <%= f.label :quantity %><br>
+   <%= f.label :sub_id,"Substance" %>
+    <%= f.collection_select :sub_id, Sub.all,:id,:name %> 
+    
+  </div>
+  <div class="field">
+    <%= f.label :quantity %>
     <%= f.text_field :quantity %>
   </div>
   <div class="field">
-    <%= f.label :reasoning %><br>
+    <%= f.label :reasoning %>
     <%= f.text_field :reasoning %>
   </div>
   <div class="field">
-    <%= f.label :operator %><br>
+    <%= f.label :operator %>
     <%= f.text_field :operator %>
   </div>
   <div class="field">
-    <%= f.label :tech_advisor %><br>
+    <%= f.label :tech_advisor %>
     <%= f.text_field :tech_advisor %>
   </div>
   <div class="actions">
