--- a/app/views/pmus/show.html.erb
+++ b/app/views/pmus/show.html.erb
@@ -36,10 +36,29 @@
   <%= @pmu.expected_production %>
 </p>
 
+<b>Facilities</b>
+<ul>
+  <% @pmu.facilities.each do|facility|%>
+  <li><%=facility.name%></li>
+  <% end%>
+</ul>
 
 <%= link_to 'Edit', edit_grower_pmu_path(@grower,@pmu) %> |
 
 <%= link_to 'Back', grower_pmus_path(@grower,@pmu) %>
+<hr>
+<%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=true&zoom=16&markers=#{@pmu.latitude}%2C#{@pmu.longitude}" %>
+<%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&maptype=satellite&zoom=18&markers=#{@pmu.latitude}%2C#{@pmu.longitude}" %>
+
+
+
+<hr>
+<h4>Nearby Pmus</h4>
+<ul>
+  <% for location in @pmu.nearbys(10)%>
+  <li><%=link_to location.nearest_village, grower_pmu_path %>(<%= location.distance.round(2) %> miles) </li>
+   <%end %>
+</ul>
 
 <hr>
 <%= link_to "Add Phyto Protection",new_pmu_line_path(@pmu)%>
