--- a/app/views/pmus/show.html.erb
+++ b/app/views/pmus/show.html.erb
@@ -30,7 +30,7 @@
 <b>Facilities</b>
 <ul>
   <% @pmu.facilities.each do|facility|%>
-  <li><%=facility.name%></li>
+  <li><%=facility.id%></li>
   <% end%>
 </ul>
 
