Add instructions crude nested to clitem

--- a/app/views/clitems/show.html.erb
+++ b/app/views/clitems/show.html.erb
@@ -34,3 +34,6 @@
 
 <%= link_to 'Edit', edit_clitem_path(@clitem) %> |
 <%= link_to 'Back', clitems_path %>
+<hr>
+<%=link_to 'Add an Instruction +', new_clitem_instruction_path(@clitem)%>
+
