--- a/app/views/instructions/_form.html.erb
+++ b/app/views/instructions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@instruction) do |f| %>
+<%= form_for([@clitem,@instruction]) do |f| %>
   <% if @instruction.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@instruction.errors.count, "error") %> prohibited this instruction from being saved:</h2>
@@ -12,10 +12,12 @@
   <% end %>
 
   <div class="field">
+    <strong>Compliance Criteria</strong><br>
+    <%= @clitem.compliance_criteria%>
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description ,:size=> "20x10" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit %> | <%= link_to 'Cancel', clitem_instructions_path %>
   </div>
 <% end %>
