--- a/app/views/instructions/edit.html.erb
+++ b/app/views/instructions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @instruction %> |
-<%= link_to 'Back', instructions_path %>
+<%= link_to 'Show' %> |
+<%= link_to 'Back', clitem_instructions_path %>
