--- a/app/views/instructions/new.html.erb
+++ b/app/views/instructions/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New instruction</h1>
+<h1>New instruction for <%=link_to @clitem.number,@clitem%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', instructions_path %>
+
