--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,13 @@
         <p>&copy; instaGAP 2014</p>
       </footer>
 
+      <div id="urhere">
+    <%=debug(params)if Rails.env.development?%>
+  </div>
+
     </div> <!-- /container -->
+
+    
 
   </body>
 </html>
