--- a/app/views/clitems/index.html.erb
+++ b/app/views/clitems/index.html.erb
@@ -1,3 +1,5 @@
+<%= will_paginate @clitems %>
+
 <h1>Listing clitems</h1>
 
 <table>
@@ -33,6 +35,7 @@
     <% end %>
   </tbody>
 </table>
+<%= will_paginate @clitems %>
 
 <br>
 
