--- a/app/views/growers/show.html.erb
+++ b/app/views/growers/show.html.erb
@@ -1,6 +1,8 @@
 <%=link_to "<<=Back to Growers list ",group_growers_path%>
-
-<h3><%=@group.name%></h3>
+<h3>Group Info</h3>
+<h5><%=@group.name%></h5>
+<hr>
+<h3>Grower Info</h3>
 <h5><%=@grower.name%></h5> 
 <p><b>Name :</b><%=@grower.name%></p>
 <p><b>Address:</b><%=@grower.address%></p>
@@ -10,14 +12,60 @@
 <%=link_to "Delete",group_grower_path(@group,@grower),method: :delete %>
 <br><br>
 <hr>
+<h3>PMUs</h3>
 <h5>Fields in Production <%=@grower.pmus.count(:expected_production) %></h5>
 <h5>Expected Production <%=@grower.pmus.sum(:expected_production)%></h5>
 
 <%=render :partial=> "pmu_list",:locals=>{:pmus=>Pmu.find_all_by_grower_id(@grower.id)} %>
 
 
-<hr>
 
 <p>
 	<%=link_to "Add a Field ",new_grower_pmu_path(@grower)%>
-</p
+</p>
+
+<hr>
+<h3>Logbook</h3>
+<%=link_to("Log Book",grower_events_path(@grower),class:"btn btn-link")%>
+
+<p>
+  <%=link_to "+ Fertilization",new_grower_evfert_path(@grower) %><br>
+  <%=link_to "+ Cultivation",new_grower_evcult_path(@grower) %><br>
+  <%=link_to "+ Phyto Protection",new_grower_evphyto_path(@grower) %><br>
+  <%=link_to "+ Event",new_grower_event_path(@grower) %>
+</p>
+
+  <p>Field book Log Entries</p>
+	<table>
+	<thead>
+		<tr>
+			<th>Date</th>
+			<th>Type</th>
+			<th>Pmus</th>
+			<th>Note</th>
+
+		</tr>
+	</thead>
+	<tbody>
+		<% @events.each do |event|%>
+		<tr>
+			<td><%=event.date%></td>
+			<td><%=event.type%></td>
+			<td>
+			   
+			   	<% event.pmus.each do |pmu|%>
+			     <%=pmu.location%>
+			     <%end%> 
+			   
+			</td>
+		   </td>
+			<td><%=event.note%></td>
+
+		</tr>
+		<%end%>
+	</tbody>
+</table>
+
+
+
+</p>
